[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["Codewithdark <codewithdark90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "^2.3.2"
python-dotenv = "^1.0.1"
replicate = "^0.25.1"
google-generativeai = "^0.5.0"
discord-py-slash-command = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
